--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
             <h1>THE DUELLING CLUB</h1>
         </div>
 
-        <p>This is just a test</p>
+        <div id="parchment-box">
+            <h2>Instructions</h2>
 
+            <p>This is just a test</p>
+        </div>
 
+        <div id="duel-grounds">
+            <div id="opponent-power"></div>
+            <div id="score"></div>
+            <div id="player-power"></div>
+            <img id="spell-image" src="assets/images/finite-incantatem.PNG">
 
+        </div>
     </div>
 
 
