created shuffle and spells functions

--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
         <div id="parchment-box">
             <h2>Instructions</h2>
 
-            <p>This is just a test</p>
+            <p>Welcome to the duelling club. Match your opponent's (RED) power by summoning a combination of spells that will equal theirs.</p>
+            <p>Each spell has a random power level after each duel.</p>
+            <p>Don't hurt your dueling partner or you'll lose!</p>
         </div>
 
         <div id="duel-grounds">
             <div id="opponent-power"></div>
             <div id="score"></div>
             <div id="player-power"></div>
-            <img id="spell-image" src="assets/images/finite-incantatem.PNG">
+            <div id="spells"></div>
 
         </div>
     </div>
